--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="color-scheme" content="light dark">
     <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+      >
     <title>Hello world!</title>
   </head>
   <body>
